cmake_minimum_required(VERSION 3.15)
project(base_C)

#set(CMAKE_CXX_STANDARD 14)
set(CMAKE_C_STANDARD 99)

include_directories(base-statement/call_func/caller)
#include_directories(base-statement/dataStruct)
#include_directories(c++/Base-Cpp/dataStruct)
#include_directories(c++/Base-Cpp/SpeakerGame)
#include_directories(c++/Base-Cpp/StdLib)
#include_directories(c++/Base-Cpp/WokerManagerSystem)
#include_directories(c++/Base-Cpp/机房预约系统)
#include_directories(c-example/c-10-24-struct/student)
#include_directories(c-example/c-10-26/linklist)
#include_directories(c-example/c-10-26/sqlist)
#include_directories(c-example/c-10-30/doublelinklist)
#include_directories(c-example/c-10-30/list_define_fun)
#include_directories(c-example/c-10-30/list_struct_func)
#include_directories(c-example/c-10-30/looplLkList)
#include_directories(c-example/c-10-30/sequeue)
#include_directories(c-example/c-10-30/stack)

add_executable(basec
        base-statement/call_func/caller/caller.c
        base-statement/call_func/caller/provider.c
        base-statement/call_func/caller/provider.h
#        base-statement/dataStruct/list.c
#        base-statement/dataStruct/list.h
#        base-statement/dataStruct/listMain.c
#        base-statement/enum/enum1.c
#        base-statement/pointer/funcPointer1.c
#        base-statement/pointer/funcPointer2.c
#        base-statement/pointer/funcPointer3.c
#        base-statement/pointer/funcPointer4.c
#        base-statement/pointer/pointer1.c
#        base-statement/pointer/pointer10.c
#        base-statement/pointer/pointer2.c
#        base-statement/pointer/pointer3.c
#        base-statement/pointer/pointer5.c
#        base-statement/pointer/pointer6.c
#        base-statement/pointer/pointer7.c
#        base-statement/pointer/pointer8.c
#        base-statement/pointer/pointer9.c
#        base-statement/static_func/staticFunc.c
#        base-statement/struct/struct1.c
#        base-statement/struct/struct2.c
#        base-statement/array1.c
#        base-statement/array2.c
#        base-statement/break1.c
#        base-statement/continue1.c
#        base-statement/dowhile1.c
#        base-statement/Fibonacci1.c
#        base-statement/Fibonacci2.c
#        base-statement/for1.c
#        base-statement/for2.c
#        base-statement/for3.c
#        base-statement/forinfor.c
#        base-statement/goto.c
#        base-statement/if1.c
#        base-statement/if2.c
#        base-statement/if3.c
#        base-statement/inputChar.c
#        base-statement/main.c
#        base-statement/normal.c
#        base-statement/staticdemo.c
#        base-statement/switch.c
#        base-statement/typedef1.c
#        base-statement/whil1.c
#        base-statement/while2.c
#        c++/Base-Cpp/Base-Cpp/base_statement.cpp
#        c++/Base-Cpp/Base-Cpp/template_function.cpp
#        c++/Base-Cpp/Base-cpp3/class_use.cpp
#        c++/Base-Cpp/dataStruct/DoubleList.h
#        c++/Base-Cpp/dataStruct/MainStarter.cpp
#        c++/Base-Cpp/dataStruct/mStack.h
#        c++/Base-Cpp/dataStruct/Queue.cpp
#        c++/Base-Cpp/dataStruct/Queue.h
#        c++/Base-Cpp/dataStruct/SingleList.cpp
#        c++/Base-Cpp/dataStruct/SingleList.h
#        c++/Base-Cpp/PersonNote/PersonBook.cpp
#        c++/Base-Cpp/SpeakerGame/AppStarter.cpp
#        c++/Base-Cpp/SpeakerGame/speaker.h
#        c++/Base-Cpp/SpeakerGame/speakerManager.cpp
#        c++/Base-Cpp/SpeakerGame/speakerManager.h
#        c++/Base-Cpp/StdLib/accumulate_demo.cpp
#        c++/Base-Cpp/StdLib/adjacent_find_demo.cpp
#        c++/Base-Cpp/StdLib/binary_search_demo.cpp
#        c++/Base-Cpp/StdLib/classConstructor.cpp
#        c++/Base-Cpp/StdLib/classConstructor.h
#        c++/Base-Cpp/StdLib/copy_demo.cpp
#        c++/Base-Cpp/StdLib/count_demo.cpp
#        c++/Base-Cpp/StdLib/count_if_demo.cpp
#        c++/Base-Cpp/StdLib/dequeDemo.cpp
#        c++/Base-Cpp/StdLib/fill_demo.cpp
#        c++/Base-Cpp/StdLib/find_demo.cpp
#        c++/Base-Cpp/StdLib/find_if_demo.cpp
#        c++/Base-Cpp/StdLib/for_each_demo.cpp
#        c++/Base-Cpp/StdLib/function_obj.cpp
#        c++/Base-Cpp/StdLib/globalTemplateFriend.hpp
#        c++/Base-Cpp/StdLib/listDemo.cpp
#        c++/Base-Cpp/StdLib/mapDemo.cpp
#        c++/Base-Cpp/StdLib/merge_demo.cpp
#        c++/Base-Cpp/StdLib/pairDemo.cpp
#        c++/Base-Cpp/StdLib/People.hpp
#        c++/Base-Cpp/StdLib/pred_one.cpp
#        c++/Base-Cpp/StdLib/pred_two.cpp
#        c++/Base-Cpp/StdLib/queueDemo.cpp
#        c++/Base-Cpp/StdLib/random_shufle_demo.cpp
#        c++/Base-Cpp/StdLib/replace_demo.cpp
#        c++/Base-Cpp/StdLib/replace_if_demo.cpp
#        c++/Base-Cpp/StdLib/reverse_demo.cpp
#        c++/Base-Cpp/StdLib/set_difference_demo.cpp
#        c++/Base-Cpp/StdLib/set_intersection_demo.cpp
#        c++/Base-Cpp/StdLib/set_union_demo.cpp
#        c++/Base-Cpp/StdLib/setDemo.cpp
#        c++/Base-Cpp/StdLib/sort_demo.cpp
#        c++/Base-Cpp/StdLib/stackDemo.cpp
#        c++/Base-Cpp/StdLib/StarterApp.cpp
#        c++/Base-Cpp/StdLib/stringDemo.cpp
#        c++/Base-Cpp/StdLib/sumPractise.cpp
#        c++/Base-Cpp/StdLib/swap_demo.cpp
#        c++/Base-Cpp/StdLib/transform-demo.cpp
#        c++/Base-Cpp/StdLib/vectorDemo.cpp
#        c++/Base-Cpp/test/test.cpp
#        c++/Base-Cpp/WokerManagerSystem/boss.cpp
#        c++/Base-Cpp/WokerManagerSystem/Boss.h
#        c++/Base-Cpp/WokerManagerSystem/employee.h
#        c++/Base-Cpp/WokerManagerSystem/emplyee.cpp
#        c++/Base-Cpp/WokerManagerSystem/manager.cpp
#        c++/Base-Cpp/WokerManagerSystem/manager.h
#        c++/Base-Cpp/WokerManagerSystem/StartApp.cpp
#        c++/Base-Cpp/WokerManagerSystem/worker.h
#        c++/Base-Cpp/WokerManagerSystem/WorkerManager.cpp
#        c++/Base-Cpp/WokerManagerSystem/WorkerManager.h
#        c++/Base-Cpp/机房预约系统/admin.cpp
#        c++/Base-Cpp/机房预约系统/admin.h
#        c++/Base-Cpp/机房预约系统/AppStarter.cpp
#        c++/Base-Cpp/机房预约系统/comOrder.cpp
#        c++/Base-Cpp/机房预约系统/comOrder.h
#        c++/Base-Cpp/机房预约系统/computer.h
#        c++/Base-Cpp/机房预约系统/globalFile.h
#        c++/Base-Cpp/机房预约系统/identy.h
#        c++/Base-Cpp/机房预约系统/Student.cpp
#        c++/Base-Cpp/机房预约系统/student.h
#        c++/Base-Cpp/机房预约系统/Teacher.cpp
#        c++/Base-Cpp/机房预约系统/teacher.h
#        c-example/c-10-11-base-statement/argc.c
#        c-example/c-10-11-base-statement/printf.c
#        c-example/c-10-11-base-statement/sizeof.c
#        c-example/c-10-11-base-statement/sushu.c
#        c-example/c-10-11-base-statement/variable.c
#        c-example/c-10-12-define-scanf-string/define.c
#        c-example/c-10-12-define-scanf-string/scanf.c
#        c-example/c-10-12-define-scanf-string/string1.c
#        c-example/c-10-13-base-statement/abc.c
#        c-example/c-10-13-base-statement/chengfab.c
#        c-example/c-10-13-base-statement/chengjidan.c
#        c-example/c-10-13-base-statement/enum.c
#        c-example/c-10-13-base-statement/for.c
#        c-example/c-10-13-base-statement/if.c
#        c-example/c-10-13-base-statement/if_else_if.c
#        c-example/c-10-13-base-statement/switch.c
#        c-example/c-10-13-base-statement/while.c
#        c-example/c-10-13-base-statement/while1.c
#        c-example/c-10-17-digui/arr_arg.c
#        c-example/c-10-17-digui/digui1.c
#        c-example/c-10-17-digui/digui2.c
#        c-example/c-10-17-digui/fibonaqie.c
#        c-example/c-10-17-digui/sprintf.c
#        c-example/c-10-18-pointer/my_copy.c
#        c-example/c-10-18-pointer/pointer1.c
#        c-example/c-10-18-pointer/pointer2.c
#        c-example/c-10-18-pointer/pointer3.c
#        c-example/c-10-18-pointer/pointer6.c
#        c-example/c-10-18-pointer/pointer7.c
#        c-example/c-10-18-pointer/voidp.c
#        c-example/c-10-19-arr/area.c
#        c-example/c-10-19-arr/arr.c
#        c-example/c-10-19-arr/arr_reverse.c
#        c-example/c-10-19-arr/arrplus.c
#        c-example/c-10-19-arr/arrtest.c
#        c-example/c-10-19-arr/char_pointer.c
#        c-example/c-10-19-arr/num_base.c
#        c-example/c-10-19-arr/pointer2.c
#        c-example/c-10-19-arr/showscore.c
#        c-example/c-10-21-tools/a.c
#        c-example/c-10-21-tools/strcat.c
#        c-example/c-10-21-tools/strcmp.c
#        c-example/c-10-21-tools/strcpy.c
#        c-example/c-10-21-tools/string_sort.c
#        c-example/c-10-21-tools/strlen.c
#        c-example/c-10-24-struct/student/struct.h
#        c-example/c-10-24-struct/student/stu_main.c
#        c-example/c-10-24-struct/student/student.c
#        c-example/c-10-24-struct/student/student.h
#        c-example/c-10-24-struct/a.c
#        c-example/c-10-24-struct/func_pointer.c
#        c-example/c-10-24-struct/malloc1.c
#        c-example/c-10-24-struct/malloc2.c
#        c-example/c-10-24-struct/struct1.c
#        c-example/c-10-24-struct/struct_stu.c
#        c-example/c-10-24-struct/union1.c
#        c-example/c-10-24-struct/union2.c
#        c-example/c-10-24-struct/union3.c
#        c-example/c-10-26/linklist/linklist.c
#        c-example/c-10-26/linklist/linklist.h
#        c-example/c-10-26/linklist/main.c
#        c-example/c-10-26/linklist/struct.h
#        c-example/c-10-26/sqlist/main.c
#        c-example/c-10-26/sqlist/sqlist.c
#        c-example/c-10-26/sqlist/sqlist.h
#        c-example/c-10-26/sqlist/struct.h
#        c-example/c-10-26/args.c
#        c-example/c-10-26/qsort.c
#        c-example/c-10-26/srand.c
#        c-example/c-10-30/bitree/bitree.c
#        c-example/c-10-30/doublelinklist/llist.c
#        c-example/c-10-30/doublelinklist/llist.h
#        c-example/c-10-30/doublelinklist/main.c
#        c-example/c-10-30/doublelinklist/struct.h
#        c-example/c-10-30/list_define_fun/list.h
#        c-example/c-10-30/list_define_fun/main.c
#        c-example/c-10-30/list_struct_func/list.c
#        c-example/c-10-30/list_struct_func/list.h
#        c-example/c-10-30/list_struct_func/main.c
#        c-example/c-10-30/list_struct_func/struct.h
#        c-example/c-10-30/looplLkList/LoopLkList.c
#        c-example/c-10-30/looplLkList/LoopLkList.h
#        c-example/c-10-30/looplLkList/main.c
#        c-example/c-10-30/looplLkList/struct.h
#        c-example/c-10-30/sequeue/main.c
#        c-example/c-10-30/sequeue/sequeue.c
#        c-example/c-10-30/sequeue/sequeue.h
#        c-example/c-10-30/sequeue/struct.h
#        c-example/c-10-30/stack/main.c
#        c-example/c-10-30/stack/stack.c
#        c-example/c-10-30/stack/stack.h
#        c-example/c-10-30/stack/struct.h
#        c-example/c-10-30/args.c
#        unix-c/10-chapter/block_signal.c
#        unix-c/10-chapter/custom_signal.c
#        unix-c/10-chapter/my_alarm.c
#        unix-c/10-chapter/my_sleep.c
#        unix-c/10-chapter/pr_mask_func.c
#        unix-c/10-chapter/process_signal.c
#        unix-c/10-chapter/protect_critical.c
#        unix-c/10-chapter/sigcld_process.c
#        unix-c/10-chapter/signal_parent_child.c
#        unix-c/10-chapter/sigsetjump.c
#        unix-c/11-chapter/creat_pthread.c
#        unix-c/11-chapter/pthread_stack.c
#        unix-c/11-chapter/thread_cleanup.c
#        unix-c/11-chapter/wait_pthread.c
#        unix-c/2-chapter/fork.c
#        unix-c/2-chapter/getc_putc.c
#        unix-c/2-chapter/getpid.c
#        unix-c/2-chapter/getugid.c
#        unix-c/2-chapter/Myls.c
#        unix-c/2-chapter/printSysconfPathconf.c
#        unix-c/2-chapter/read_write_2_stdout.c
#        unix-c/2-chapter/signal.c
#        unix-c/2-chapter/strerror.c
#        unix-c/3-chapter/get_file_mode.c
#        unix-c/4-chapter/access.c
#        unix-c/4-chapter/lstat.c
#        unix-c/5-chapter/printStream.c
#        unix-c/5-chapter/tempnam.c
#        unix-c/5-chapter/tmpfile.c
#        unix-c/6-chapter/getpwent.c
#        unix-c/6-chapter/time.c
#        unix-c/7-chapter/atexit.c
#        unix-c/7-chapter/longjump.c
#        unix-c/7-chapter/print_resources.c
#        unix-c/7-chapter/printEnv.c
#        unix-c/7-chapter/processLine.c
#        unix-c/8-chapter/condition_print.c
#        unix-c/8-chapter/exec_fm.c
#        unix-c/8-chapter/fork1.c
#        unix-c/8-chapter/fork2.c
#        unix-c/8-chapter/niceset.c
#        unix-c/8-chapter/print_process_status.c
#        unix-c/8-chapter/print_process_time.c
#        unix-c/8-chapter/system.c
#        unix-c/8-chapter/vfork1.c
#        unix-c/9-chapter/creat_orphaned.c
#        unix-c/select/epoll.c
#        unix-c/select/poll.c
#        unix-c/select/select.c
#        unix-c/select/writeFifo.c
)
